# plummycode-chat

./: docker-compose.yml  run.ps1
client/: .eslintrc.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/src/: middleware.ts
server/: .pylintrc  Dockerfile  manage.py  pyproject.toml  pytest.ini  server_error.txt  server_output.txt
server/Chat/: admin.py  api.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/Chat/migrations/: 0001_initial.py  0002_initial.py  0003_chat_image_alter_imagesofmessage_image.py  0004_chat_last_message_chat_last_message_time_chat_name_and_more.py  0005_alter_chat_name.py  0006_message_type_of_alter_message_user_and_more.py  0007_remove_chat_last_message_and_more.py  0008_alter_chat_image_alter_chat_name_alter_message_chat.py
server/FriendList/: admin.py  api.py  apps.py  excluded_path.py  models.py  permissions.py  serializers.py  urls.py
server/FriendList/migrations/: 0001_initial.py  0002_initial.py  0003_alter_friendrequest_is_active.py
server/User/: admin.py  api.py  apps.py  auth.py  authentication.py  models.py  permissions.py  scheme.py  serializers.py  urls.py  validators.py  views.py
server/User/migrations/: 0001_initial.py  0002_user_dob_user_is_private.py
server/locale/de/LC_MESSAGES/: django.po
server/locale/fr/LC_MESSAGES/: django.po
server/locale/ru/LC_MESSAGES/: django.po
server/plummycodeChat/: __init__.py  asgi.py  celery.py  gunicorn.conf.py  jazzmin_settings.py  jwt_settings.py  settings.py  urls.py  wsgi.py
(+89 files in other folders)
